# purple-typewriter

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
debian/: README.Debian  changelog  control  copyright  pidgin-typewriter.doc-base.EX
po/: POTFILES.in  pt.po  typewriter.pot
share/sounds/: Makefile.am
src/: Makefile.am  typewriter.c
